--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </tr>
           </table>
     </div>
-    <footer>Copy Righted to Abderrahmane Chagour</footer>
+    <footer>Copy Righted to The Father Adam</footer>
     <script src="cons.js"></script>
 </body>
 </html>
